force-app/main/default/objects/pdffiller_sfree__AirSlateSettings__c/pdffiller_sfree__AirSlateSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>airSlate Settings</label>
</CustomObject>