force-app/main/default/objects/pdffiller_sfree__AirSlateSettings__c/fields/pdffiller_sfree__airSlate_buttonPrefix__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__airSlate_buttonPrefix__c</fullName>
    <label>airSlate_buttonPrefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>