force-app/main/default/objects/pdffiller_sfree__AirSlateSettings__c/fields/pdffiller_sfree__Analytics_ID__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__Analytics_ID__c</fullName>
    <label>Analytics_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>