force-app/main/default/objects/pdffiller_sfree__AirSlateSettings__c/fields/pdffiller_sfree__API_URL__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__API_URL__c</fullName>
    <label>API_URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>