force-app/main/default/objects/pdffiller_sfree__AirSlateSettings__c/fields/pdffiller_sfree__Auth_Alternative_App_ID_USERS__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__Auth_Alternative_App_ID_USERS__c</fullName>
    <label>Auth Alternative App ID USERS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>