force-app/main/default/objects/pdffiller_sfree__AirSlateSettings__c/fields/pdffiller_sfree__Current_Wizard_Step__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__Current_Wizard_Step__c</fullName>
    <label>Current Wizard Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>