force-app/main/default/objects/pdffiller_sfree__AirSlateSettings__c/fields/pdffiller_sfree__DASHBOARD_API_URL__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__DASHBOARD_API_URL__c</fullName>
    <label>DASHBOARD_API_URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>