force-app/main/default/objects/pdffiller_sfree__AirSlateSettings__c/fields/pdffiller_sfree__InstallationUser_ID__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__InstallationUser_ID__c</fullName>
    <label>InstallationUser_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>