force-app/main/default/objects/pdffiller_sfree__AirSlateSettings__c/fields/pdffiller_sfree__OAuth_Alternative_App_Secret__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__OAuth_Alternative_App_Secret__c</fullName>
    <label>OAuth Alternative App Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>