force-app/main/default/objects/pdffiller_sfree__AirSlateSettings__c/fields/pdffiller_sfree__OAuth_Alternative_Credentials_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__OAuth_Alternative_Credentials_Encrypted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OAuth Alternative Credentials Encrypted</label>
    <type>Checkbox</type>
</CustomField>