force-app/main/default/objects/pdffiller_sfree__AirSlateSettings__c/fields/pdffiller_sfree__Use_MyDomain_instead_of_InstanceName__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__Use_MyDomain_instead_of_InstanceName__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use MyDomain instead of InstanceName</label>
    <type>Checkbox</type>
</CustomField>