force-app/main/default/objects/pdffiller_sfree__AirSlateSettings__c/fields/pdffiller_sfree__WorkSpace_Subdomain__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__WorkSpace_Subdomain__c</fullName>
    <label>WorkSpace Subdomain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>